source/blender/makesrna/intern/rna_image.c
@@ -598,6 +598,7 @@ static void rna_render_slots_active_set(PointerRNA *ptr,
     int index = BLI_findindex(&image->renderslots, slot);
     if (index != -1) {
       image->render_slot = index;
+      image->gpuflag |= IMA_GPU_REFRESH;
     }
   }
 }
@@ -613,6 +614,7 @@ static void rna_render_slots_active_index_set(PointerRNA *ptr, int value)
   Image *image = (Image *)ptr->owner_id;
   int num_slots = BLI_listbase_count(&image->renderslots);
   image->render_slot = value;
+  image->gpuflag |= IMA_GPU_REFRESH;
   CLAMP(image->render_slot, 0, num_slots - 1);
 }
 
